--- a/Jouranl/Journal/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Jouranl/Journal/Views/Storyboards/Base.lproj/Main.storyboard
@@ -16,21 +16,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="72" id="L3N-Ak-fUt" customClass="EntryTableViewCell" customModule="Journal">
-                                <rect key="frame" x="0.0" y="28" width="414" height="72"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="101" id="L3N-Ak-fUt" customClass="EntryTableViewCell" customModule="Journal">
+                                <rect key="frame" x="0.0" y="28" width="414" height="101"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="L3N-Ak-fUt" id="L8X-u0-Q0E">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="72"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="101"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="121" translatesAutoresizingMaskIntoConstraints="NO" id="luM-VZ-BbE">
-                                            <rect key="frame" x="18" y="7.5" width="378" height="57"/>
+                                            <rect key="frame" x="20" y="20" width="374" height="61"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="nZU-Ll-Di4">
-                                                    <rect key="frame" x="0.0" y="0.0" width="121.5" height="57"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="117.5" height="57"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vXE-0W-tC1">
-                                                            <rect key="frame" x="0.0" y="0.0" width="121.5" height="33.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="117.5" height="33.5"/>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -44,7 +44,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="02/12/20, 07:00 AM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X9g-Ku-Ycb">
-                                                    <rect key="frame" x="242.5" y="0.0" width="135.5" height="18"/>
+                                                    <rect key="frame" x="238.5" y="0.0" width="135.5" height="18"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -53,8 +53,10 @@
                                         </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="luM-VZ-BbE" firstAttribute="centerY" secondItem="L8X-u0-Q0E" secondAttribute="centerY" id="6dJ-Oc-xxy"/>
-                                        <constraint firstItem="luM-VZ-BbE" firstAttribute="centerX" secondItem="L8X-u0-Q0E" secondAttribute="centerX" id="ZEf-ww-a5h"/>
+                                        <constraint firstItem="luM-VZ-BbE" firstAttribute="leading" secondItem="L8X-u0-Q0E" secondAttribute="leading" constant="20" id="EUk-WW-lII"/>
+                                        <constraint firstItem="luM-VZ-BbE" firstAttribute="top" secondItem="L8X-u0-Q0E" secondAttribute="top" constant="20" id="S1E-uP-O47"/>
+                                        <constraint firstAttribute="trailing" secondItem="luM-VZ-BbE" secondAttribute="trailing" constant="20" id="Z1O-qk-qVx"/>
+                                        <constraint firstAttribute="bottom" secondItem="luM-VZ-BbE" secondAttribute="bottom" constant="20" id="xcJ-AW-O3Z"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -73,7 +75,7 @@
                     <navigationItem key="navigationItem" title="Journal" id="BND-XB-sd0">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="leF-Z9-acZ">
                             <connections>
-                                <segue destination="vUw-Vd-EFM" kind="show" identifier="AddJournal Segue" id="8wh-yz-xcO"/>
+                                <segue destination="vUw-Vd-EFM" kind="show" identifier="AddJournalSegue" id="8wh-yz-xcO"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -151,6 +153,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="6RE-C6-rOp"/>
+        <segue reference="8wh-yz-xcO"/>
     </inferredMetricsTieBreakers>
 </document>
